fix some bug and update https api

--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ac_base_coorlayout"
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.afei.bat.afeiplayandroid.ui.base.BaseActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/ac_base_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -33,7 +33,7 @@
             android:id="@+id/toolbar"
             layout="@layout/layout_toolbar" />
         <!--</android.support.design.widget.CollapsingToolbarLayout>-->
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/ac_base_tablayout"
             android:layout_width="match_parent"
             android:layout_height="30dp"
@@ -44,7 +44,7 @@
             app:tabSelectedTextColor="@color/c_ffffff"
             app:tabIndicatorColor="@color/c_f2f2f2"
             app:tabMode="scrollable" />
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
 
     <FrameLayout
@@ -55,4 +55,4 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </FrameLayout>
-</android.support.design.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
