--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:padding="50dp"
     tools:context="com.afei.bat.afeiplayandroid.ui.LoginActivity">
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/activity_login_name_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,28 +16,28 @@
         app:errorEnabled="true"
         app:hintTextAppearance="@style/EditTextStyle">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/activity_login_user_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/user_name" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/activity_login_pass_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true"
         app:hintTextAppearance="@style/EditTextStyle">
 
-        <android.support.design.widget.TextInputEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/activity_login_user_pass"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/user_pass"
             android:inputType="textPassword" />
-    </android.support.design.widget.TextInputLayout>
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
