--- a/app/src/main/res/layout/activity_knowledge.xml
+++ b/app/src/main/res/layout/activity_knowledge.xml
@@ -6,8 +6,8 @@
     android:orientation="vertical"
     tools:context="com.afei.bat.afeiplayandroid.ui.activity.KnowledgeActivity">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/activity_knowledge_vp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
+        android:layout_height="wrap_content"></androidx.viewpager.widget.ViewPager>
 </LinearLayout>
