--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -18,13 +18,13 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
 
-        <android.support.design.widget.BottomNavigationView
+        <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/activity_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="?android:windowBackground"
-            app:menu="@menu/navigation"></android.support.design.widget.BottomNavigationView>
+            app:menu="@menu/navigation"></com.google.android.material.bottomnavigation.BottomNavigationView>
     </LinearLayout>
 
     <LinearLayout
@@ -112,4 +112,4 @@
             android:layout_height="1dp"
             android:background="@color/c_f2f2f2" />
     </LinearLayout>
-</android.support.v4.widget.DrawerLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
